xmonad/.xmonad/xmonad.errors

xmonad.hs:125:61: error: Variable not in scope: help :: [Char]
    |
125 |     , ((modm .|. shiftMask, xK_slash ), spawn ("echo \"" ++ help ++ "\" | xmessage -file -"))
    |                                                             ^^^^
